pg connection works with activerecord

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,7 @@
 MAPBOX_TOKEN=""
+DATABASE_POOL=""
+DATABASE_TIMEOUT=""
+DATABASE_HOST=localhost
+DATABASE_USERNAME=postalcode
+DATABASE_PASSWORD=postalcode
+DATABASE_NAME=postalcode
