Export sqlite to csv

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,25 @@
 default: &default
   adapter:  postgresql
-  pool:     <% ENV['DATABASE_POOL'] %>
-  timeout:  <% ENV['DATABASE_TIMEOUT'] %>
-  host:     <% ENV['DATABASE_HOST'] %>
-  username: <% ENV['DATABASE_USERNAME'] %>
-  password: <% ENV['DATABASE_PASSWORD'] %>
-  database: <% ENV['DATABASE_NAME'] %>
+  pool:     <% ENV["DATABASE_POOL"] %>
+  timeout:  <% ENV["DATABASE_TIMEOUT"] %>
+  host:     <% ENV["DATABASE_HOST"] %>
+  username: <% ENV["DATABASE_USERNAME"] %>
+  password: <% ENV["DATABASE_PASSWORD"] %>
+  database: <% ENV["DATABASE_NAME"] %>
 
 production:
   <<: *default
 
 development:
   adapter: postgresql
+  host: localhost
   database: post_codes_development
-  username: <% ENV['DATABASE_USERNAME'] %>
-  password: <% ENV['DATABASE_PASSWORD'] %>
+  username: <% ENV["DATABASE_USERNAME"] %>
+  password: <% ENV["DATABASE_PASSWORD"] %>
 
 test:
   adapter: postgresql
   host: localhost
-  username: <% ENV['DATABASE_USERNAME'] %>
-  password: <% ENV['DATABASE_PASSWORD'] %>
   database: post_codes_test
+  username: <% ENV["DATABASE_USERNAME"] %>
+  password: <% ENV["DATABASE_PASSWORD"] %>
