--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ DATABASE_HOST=localhost
 DATABASE_USERNAME=postalcode
 DATABASE_PASSWORD=postalcode
 DATABASE_NAME=postalcode_development
+REDIS_URL=redis://localhost:6379/0
