--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
 MAPBOX_TOKEN=""
-DATABASE_TIMEOUT=""
 DATABASE_HOST=localhost
 DATABASE_USERNAME=postalcode
 DATABASE_PASSWORD=postalcode
 DATABASE_NAME=postalcode_development
-REDIS_URL=redis://localhost:6379/0
+REDIS_HOST=localhost
+REDIS_PORT=9851
+REDIS_DB=0
